--- a/manifest.json
+++ b/manifest.json
@@ -2,34 +2,31 @@
   "manifest_version": 3,
   "name": "LeetSync",
   "version": "1.0.0",
-  "description": "Automatically sync your LeetCode solutions to GitHub",
+  "description": "Automatically sync LeetCode solutions to GitHub",
   "permissions": [
-    "activeTab",
     "storage",
-    "background"
+    "activeTab"
   ],
   "host_permissions": [
     "https://leetcode.com/*",
     "https://api.github.com/*"
   ],
-  "background": {
-    "service_worker": "background.js"
-  },
   "content_scripts": [
     {
       "matches": ["https://leetcode.com/problems/*"],
-      "js": ["content.js"],
+      "js": ["content/content.js"],
       "run_at": "document_idle"
     }
   ],
+  "background": {
+    "service_worker": "background/background.js"
+  },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup/popup.html",
     "default_title": "LeetSync Settings"
   },
   "icons": {
     "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
     "48": "icons/icon48.png"
-    
   }
 }
